[project]
name = "rs-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "phitoduck", email = "eric.riddoch@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "google-api-python-client",
    "google-auth",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "poethepoet",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
test = "pytest"
serve = "uv run uvicorn rs_backend.main:app --reload --reload-dir src --host 0.0.0.0 --port 8000"
